fixed the issue with dark mode

--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -141,7 +141,7 @@
         }
         .card-temp {
           display: none;
-          @media screen and(min-width:375px) {
+          @media screen and(min-width:415px) {
             padding: 0.5rem;
             width: 20%;
             margin-right: 1rem;
