--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,8 +8,8 @@ $smaller-mobile-screen-width: 750px;
   border-radius: 1rem;
   height: fit-content;
   width: fit-content;
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 95vh;
+  max-width: 95vw;
   margin-top: 1rem;
   position: absolute;
   top: 10rem;
@@ -19,6 +19,6 @@ $smaller-mobile-screen-width: 750px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  // background-color: white;
   z-index: 10;
 }
